--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Igor Popov
 email: igor@igorpopov.io
+author: Igor Popov
 description: >- # this means to ignore newlines until "baseurl:"
   Igor's website, a place where he writes about software development.
 baseurl: "" # the subpath of your site, e.g. /blog
